--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar">
             <h2 class="logo__tittle">
-                <img src="https://i.postimg.cc/4x5D8TC1/logofbi.png" alt="">
+                <img src="https://i.postimg.cc/4x5D8TC1/logofbi.png" alt="">  
             </h2>
             <div class="menu__container nav-menu_visible">
                 <ul class="nav-menu">
@@ -100,7 +100,7 @@
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/DkSMb9hUknw" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <div class="contenido__480">
-                        <p>Servicio de seguridad, Fuerza del Orden del Gobierno de Corea del Sur y Servicio de Inteligencia.</p>
+                        <p>Servicio de seguridad, Inteligencia y Fuerza del Orden del Gobierno de Corea del Sur y Francia</p>
                     </div>
                 </section>
                 <div class="ola_inferior" id="ola_inferior">
