cambio de descripcion de subdirector

--- a/protocolo.html
+++ b/protocolo.html
@@ -371,7 +371,7 @@
                             <h4 class="rango__tittle">SUBDIRECTOR</h4>
                         </div>
                         <div class="card__description card__sub">
-                            <p>La Sub Directora es la segunda máxima autoridad que sirve inmediatamente a las
+                            <p>El Sub-director es la segunda máxima autoridad que sirve inmediatamente a las
                                 órdenes del Director o le sustituye en sus funciones.</p>
             
                             <h5>Funciones:</h5>
